--- a/css/studio.css
+++ b/css/studio.css
@@ -37,6 +37,16 @@ div {position:fixed; bottom:100%;}
 #pichold>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
+@media screen and(min-width:769px){
+      #pichold>img{width:45%; height:85%;}
+      #pichold>h3{bottom:80.5%; left:65%;}
+      #pichold>h4{bottom:70%; left:65%;}
+}
+@media only screen and(min-width:769px){
+      #pichold>img{width:45%; height:85%;}
+      #pichold>h3{bottom:80.5%; left:65%;}
+      #pichold>h4{bottom:70%; left:65%;}
+}
 
 #pichold1{position:absolute; top:200%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 3px 1px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold1>img{position:absolute; top:5%; left:5%; height:60%; width:90%;}
@@ -63,23 +73,3 @@ div {position:fixed; bottom:100%;}
 #pichold3>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
 #pichold3>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold3>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
-
-@media only screen and(min-width:1200px){
-      #pichold>img{width:550px; height:650px;}
-      #pichold>h3{bottom:80.5%; left:65%;}
-      #pichold>h4{bottom:70%; left:65%;}
-      
-      #pichold1>img{width:550px; height:650px;}
-      #pichold1>h3{bottom:80.5%; left:65%;}
-      #pichold1>h4{bottom:70%; left:65%;}
-      
-      #pichold2>img{width:550px; height:650px;}
-      #pichold2>h3{bottom:80.5%; left:65%;}
-      #pichold2>h4{bottom:70%; left:65%;}
-      
-      #pichold3>img{width:550px; height:650px;}
-      #pichold3>h3{bottom:80.5%; left:65%;}
-      #pichold3>h4{bottom:70%; left:65%;}
-      
-
-}
