--- a/css/studio.css
+++ b/css/studio.css
@@ -1,5 +1,3 @@
-body {margin:0px; background:white;}
-
 
 #topbar {width:100%; height:75%; background:white; position:fixed; opacity:1; border-padding:50px; right:0px; top:70px; border-radius:; display:none; transistion: display 10s linear 0s;}
 #topbar>img { position:fixed; top:102px; right:13px; display:block; height:20%; width:115px; border:2px double grey; border-radius:50%;}	
@@ -26,50 +24,79 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
 #stdi>video{position:absolute; left:4%; top:2%; height:95%; width:92%;}
 
 
-div {position:fixed; bottom:100%;}
-
 
 #pichold{position:absolute; top:100%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
-#pichold>img{position:absolute; top:5%; left:5%; height:60%; width:90%;}
-#pichold>h3{position:absolute; bottom:25.5%; left:15%; font-size:15px; font-weight:normal; letter-spacing:5px;}
-#pichold>h4{position:absolute; bottom:15%; left:15%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
+#pichold>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
+#pichold>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
+#pichold>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
 #pichold>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
 #pichold>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
-@media screen and(min-width:769px){
-      #pichold>img{width:45%; height:85%;}
-      #pichold>h3{bottom:80.5%; left:65%;}
-      #pichold>h4{bottom:70%; left:65%;}
+@media (max-width:768px){
+      #pichold>img{width:90%; height:60%;}
+      #pichold>h3{bottom:25.5%; left:15%;}
+      #pichold>h4{bottom:15%; left:15%;}
 }
-@media only screen and(min-width:769px){
-      #pichold>img{width:45%; height:85%;}
-      #pichold>h3{bottom:80.5%; left:65%;}
-      #pichold>h4{bottom:70%; left:65%;}
+@media screen and(max-width:768px){
+      #pichold>img{width:90%; height:60%;}
+      #pichold>h3{bottom:25.5%; left:15%;}
+      #pichold>h4{bottom:15%; left:15%;}
 }
 
 #pichold1{position:absolute; top:200%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
-#pichold1>img{position:absolute; top:5%; left:5%; height:60%; width:90%;}
-#pichold1>h3{position:absolute; bottom:25.5%; left:15%; font-size:15px; font-weight:normal; letter-spacing:5px;}
-#pichold1>h4{position:absolute; bottom:15%; left:15%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
+#pichold1>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
+#pichold1>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
+#pichold1>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
 #pichold1>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
 #pichold1>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold1>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
+@media (max-width:768px){
+      #pichold1>img{width:90%; height:60%;}
+      #pichold1>h3{bottom:25.5%; left:15%;}
+      #pichold1>h4{bottom:15%; left:15%;}
+}
+@media screen and(max-width:768px){
+      #pichold1>img{width:90%; height:60%;}
+      #pichold1>h3{bottom:25.5%; left:15%;}
+      #pichold1>h4{bottom:15%; left:15%;}
+}
 
 #pichold2{position:absolute; top:300%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
-#pichold2>img{position:absolute; top:5%; left:5%; height:60%; width:90%;}
-#pichold2>h3{position:absolute; bottom:25.5%; left:15%; font-size:15px; font-weight:normal; letter-spacing:5px;}
-#pichold2>h4{position:absolute; bottom:15%; left:15%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
+#pichold2>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
+#pichold2>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
+#pichold2>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
 #pichold2>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:red; box-shadow:1px 1px 1px .3px black;}
 #pichold2>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold2>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
+@media (max-width:768px){
+      #pichold2>img{width:90%; height:60%;}
+      #pichold2>h3{bottom:25.5%; left:15%;}
+      #pichold2>h4{bottom:15%; left:15%;}
+}
+@media screen and(max-width:768px){
+      #pichold2>img{width:90%; height:60%;}
+      #pichold2>h3{bottom:25.5%; left:15%;}
+      #pichold2>h4{bottom:15%; left:15%;}
+}
 
 #pichold3{position:absolute; top:400%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
-#pichold3>img{position:absolute; top:5%; left:5%; height:60%; width:90%;}
-#pichold3>h3{position:absolute; bottom:25.5%; left:15%; font-size:15px; font-weight:normal; letter-spacing:5px;}
-#pichold3>h4{position:absolute; bottom:15%; left:15%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
+#pichold3>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
+#pichold3>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
+#pichold3>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
 #pichold3>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
 #pichold3>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold3>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
+
+@media (max-width:768px){
+      #pichold3>img{width:90%; height:60%;}
+      #pichold3>h3{bottom:25.5%; left:15%;}
+      #pichold3>h4{bottom:15%; left:15%;}
+}
+@media screen and(max-width:768px){
+      #pichold3>img{width:90%; height:60%;}
+      #pichold3>h3{bottom:25.5%; left:15%;}
+      #pichold3>h4{bottom:15%; left:15%;}
+}
