--- a/css/studio.css
+++ b/css/studio.css
@@ -1,4 +1,3 @@
-
 #topbar {width:100%; height:75%; background:white; position:fixed; opacity:1; border-padding:50px; right:0px; top:70px; border-radius:; display:none; transistion: display 10s linear 0s;}
 #topbar>img { position:fixed; top:102px; right:13px; display:block; height:20%; width:115px; border:2px double grey; border-radius:50%;}	
 #topbar:hover {background:linear-gradient(white 15%, grey 555%); }
@@ -13,7 +12,7 @@
 h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san-serif; font-weight:lighter; font-size:26px; }
 
 #tpflr {width:100%; background:black; top:0px; height:4%; position:fixed; display:none; opacity:1; box-shadow:.5px .5px .5px 1px black; border-radius: 0px 0px 1000px 1000px;}
-#topfloor{width:33px; height:22px; right:1.6%; top:1px; background:white; border-radius:4px 4px 12px 4px; position:absolute; display:; transistion:background 5s linear 0s; animati:backgroundchange 15s infinite alternate ease-out; animation-delay:8s;}
+#topfloor{width:33px; height:22px; right:1.6%; top:1px; background:white; border-radius:4px 4px 12px 4px; position:absolute; display:; transistion:background 5s linear 0s; animation:backgroundchange 15s infinite alternate ease-out; animation-delay:8s;}
 #topfloor>div {width:26px; height:3px; margin:3px; background:black; opacity:.2; border-radius:4px; transistion:background.8s linear 0s;}
 #topfloor:hover {background:rgba(0,0,0,.1); opacity:1; }
 #topfloor:hover div {background:white; width:18px; opacity:1;}
@@ -29,26 +28,32 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
 #pichold>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
 #pichold>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
 #pichold>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
-#pichold>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold>#buy{position:absolute; bottom:6%; left:94%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold>#buybox>h2{position:absolute; font-size:13px; color:white; font-weight:bold; font-family:Cursive; top:-20px; left:3px;}
+#pichold>#buybox{position:absolute; display:none; bottom:6%; left:85.5%; width:120px; height:16px; border-radius:10%; background:rgba(0,150,0,.5); box-shadow:1px 1px 1px .3px black; letter-spacing:4px;}
 #pichold>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
-
 @media (max-width:768px){
       #pichold>img{width:90%; height:60%;}
       #pichold>h3{bottom:25.5%; left:15%;}
       #pichold>h4{bottom:15%; left:15%;}
+      #pichold>#buybox{left:80%; width:60px; letter-spacing:0px;}
 }
 @media screen and(max-width:768px){
       #pichold>img{width:90%; height:60%;}
       #pichold>h3{bottom:25.5%; left:15%;}
       #pichold>h4{bottom:15%; left:15%;}
+      #pichold>#buybox{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 
 #pichold1{position:absolute; top:200%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold1>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
 #pichold1>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
 #pichold1>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
-#pichold1>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold1>#buy{position:absolute; bottom:6%; left:94%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold1>#buybox1>h2{position:absolute; font-size:13px; color:white; font-weight:bold; font-family:Cursive; top:-20px; left:3px;}
+#pichold1>#buybox1{position:absolute; display:none; bottom:6%; left:85.5%; width:120px; height:16px; border-radius:10%; background:rgba(0,150,0,.5); box-shadow:1px 1px 1px .3px black; letter-spacing:4px;}
 #pichold1>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold1>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
@@ -56,18 +61,24 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
       #pichold1>img{width:90%; height:60%;}
       #pichold1>h3{bottom:25.5%; left:15%;}
       #pichold1>h4{bottom:15%; left:15%;}
+      #pichold1>#buybox1{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 @media screen and(max-width:768px){
       #pichold1>img{width:90%; height:60%;}
       #pichold1>h3{bottom:25.5%; left:15%;}
       #pichold1>h4{bottom:15%; left:15%;}
+      #pichold1>#buybox1{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 
 #pichold2{position:absolute; top:300%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold2>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
 #pichold2>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
 #pichold2>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
-#pichold2>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:red; box-shadow:1px 1px 1px .3px black;}
+#pichold2>#buy{position:absolute; bottom:6%; left:94%; width:16px; height:16px; border-radius:50%; background:red; box-shadow:1px 1px 1px .3px black;}
+#pichold2>#buybox2>h2{position:absolute; font-size:13px; color:white; font-weight:bold; font-family:Cursive; top:-20px; left:3px;}
+#pichold2>#buybox2{position:absolute; display:none; bottom:6%; left:85.5%; width:120px; height:16px; border-radius:10%; background:rgba(150,0,0,.5); box-shadow:1px 1px 1px .3px black; leter-spacing:4px;}
 #pichold2>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold2>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
@@ -75,18 +86,24 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
       #pichold2>img{width:90%; height:60%;}
       #pichold2>h3{bottom:25.5%; left:15%;}
       #pichold2>h4{bottom:15%; left:15%;}
+      #pichold2>#buybox2{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 @media screen and(max-width:768px){
       #pichold2>img{width:90%; height:60%;}
       #pichold2>h3{bottom:25.5%; left:15%;}
       #pichold2>h4{bottom:15%; left:15%;}
+      #pichold2>#buybox2{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 
 #pichold3{position:absolute; top:400%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold3>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
 #pichold3>h3{position:absolute; bottom:80.5%; left:65%; font-size:15px; font-weight:normal; letter-spacing:5px;}
 #pichold3>h4{position:absolute; bottom:70%; left:65%; font-size:10px; font-weight:lighter; letter-spacing:2px; top-margin:50px;}
-#pichold3>#buy{position:absolute; bottom:6%; left:90%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold3>#buy{position:absolute; bottom:6%; left:94%; width:16px; height:16px; border-radius:50%; background:green; box-shadow:1px 1px 1px .3px black;}
+#pichold3>#buybox3>h2{position:absolute; font-size:13px; color:white; font-weight:bold; font-family:Cursive; top:-20px; left:3px;}
+#pichold3>#buybox3{position:absolute; display:none; bottom:6%; left:85.5%; width:120px; height:16px; border-radius:10%; background:rgba(0,150,0,.5); box-shadow:1px 1px 1px .3px black; letter-spacing:4px;}
 #pichold3>#spread{position:absolute; bottom:8%; left:15%; width:71%; height:7%; border-radius:2%; background:rgba(0,0,0,.03); box-shadow:1px 1px 1px .3px white; overflow:scroll;}
 #pichold3>#spread>h5{position:absolute; top:-28%; left:3%; font-size:10px; font-weight:normal; letter-spacing:2px;}
 
@@ -94,9 +111,74 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
       #pichold3>img{width:90%; height:60%;}
       #pichold3>h3{bottom:25.5%; left:15%;}
       #pichold3>h4{bottom:15%; left:15%;}
+      #pichold3>#buybox3{left:80%; width:60px; letter-spacing:0px;}
+      
 }
 @media screen and(max-width:768px){
       #pichold3>img{width:90%; height:60%;}
       #pichold3>h3{bottom:25.5%; left:15%;}
       #pichold3>h4{bottom:15%; left:15%;}
+      #pichold3>#buybox3{left:80%; width:60px; letter-spacing:0px;}
+      
+}
+
+#lastbar{position:absolute; top:555%; background:linear-gradient(1000deg, rgba(0,0,0,.2) 30%, black 100%); width:100%; height:20%; left:0%; box-shadow:inset 1px 2px 5px rgba(0,0,0,0); border-radius: 0px 0px 0px 0px;}
+#lastbar>#h61{position:absolute; top:-10%; left:68%; color:grey;  font-size:.8em; font-weight:lighter; letter-spacing:6px; text-align:center;}
+#lastbar>#h61>b{background:grey; color:white; border-radius:50%;}
+#lastbar>#h62{position:absolute; top:10%; left:78%; color:grey; font-size:.8em; font-weight:lighter; letter-spacing:4px; text-align:center;}
+#lastbar>#h62>a{text-decoration:none; color:grey; font-family:cursive; font-weight:bold;}
+#lastbar>#social{position:absolute; background:grey;}
+#lastbar>#social>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social>a>img:hover{filter:grayscale(0);}
+
+#lastbar>#social1{position:absolute; background:grey;}
+#lastbar>#social1>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social1>a>img:hover{filter:grayscale(0);}
+ 
+#lastbar>#social2{position:absolute; background:grey;}
+#lastbar>#social2>a>img{position:absolute; filter:grayscale(100); border-radius:20%;}
+#lastbar>#social2>a>img:hover{filter:grayscale(0);}
+ 
+#lastbar>#social3{position:absolute; background:grey;}
+#lastbar>#social3>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social3>a>img:hover{filter:grayscale(0);}
+
+ 
+@media(max-width:768px){
+     #lastbar{top:530%; height:15%; }
+     #lastbar>#h61{top:0%; left:2%; font-size:8px; letter-spacing:2px; font-weight:lighter; color:white;}
+     #lastbar>#h62{top:20%; left:2%; font-size:8px; letter-spacing:2px; font-weight:lighter; color:white;}
+     
+     #lastbar>#social{top:67%; height:22px; width:22px; left:2%; border-radius:20%; }
+     #lastbar>#social>a>img{top:5%; left:3%; height:20px; width:20px;}
+     
+     #lastbar>#social1{top:67%; height:22px; width:22px; left:13%; border-radius:20%; }
+     #lastbar>#social1>a>img{top:5%; left:3%; height:20px; width:20px;}
+     
+     #lastbar>#social2{top:67%; height:22px; width:22px; left:24%; border-radius:20%; }
+     #lastbar>#social2>a>img{top:8%; left:9%; height:18px; width:18px;}
+     
+     #lastbar>#social3{top:67%; height:22px; width:22px; left:35%; border-radius:20%; }
+     #lastbar>#social3>a>img{top:5%; left:3%; height:20px; width:20px;}
+     
+     
+}
+
+@media screen and(max-width:768px){
+      #lastbar{top:530%; height:12%;}
+      #lastbar>#h61{top:0%; left:2%; font-size:8px; letter-spacing:2px; font-weight:lighter; color:white;}
+      #lastbar>#h62{top:20%; left:2%; font-size:8px; letter-spacing:2px; font-weight:lighter; color:white;}
+      
+      #lastbar>#social{top:67%; height:22px; width:22px; left:2%; border-radius:20%; }
+      #lastbar>#social>a>img{top:5%; left:3%; height:20px; width:20px;}
+      
+      #lastbar>#social1{top:67%; height:22px; width:22px; left:13%; border-radius:20%; }
+      #lastbar>#social1>a>img{top:5%; left:3%; height:20px; width:20px;}
+      
+      #lastbar>#social2{top:67%; height:22px; width:22px; left:24%; border-radius:20%; }
+      #lastbar>#social2>a>img{top:8%; left:9%; height:18px; width:18px;}
+      
+      #lastbar>#social3{top:67%; height:22px; width:22px; left:35%; border-radius:20%; }
+      #lastbar>#social3>a>img{top:5%; left:3%; height:20px; width:20px;}
+      
 }
