--- a/css/studio.css
+++ b/css/studio.css
@@ -1,24 +1,49 @@
-#topbar {width:100%; height:75%; background:white; position:fixed; opacity:1; border-padding:50px; right:0px; top:70px; border-radius:; display:none; transistion: display 10s linear 0s;}
-#topbar>img { position:fixed; top:102px; right:13px; display:block; height:20%; width:115px; border:2px double grey; border-radius:50%;}	
+body{opacity:1; transistion: opacity.5s linear 0s;}
+
+#topbar {width:15.1%; height:100%; left:-13.6%; background:white; position:fixed; opacity:.99; top:0px; display:block; transistion:left:1s linear 0s;}
+#topbar>#topimg { position:absolute; top:2px; left:0px; display:block; height:30%; width:90%; border:2px double grey; border-radius:50%;}	
 #topbar:hover {background:linear-gradient(white 15%, grey 555%); }
 
 
 #toplink{bottom-margin:100px;}
-#home{color:black; font-weight:normal;text-decoration:none; position:fixed; left:50px; top-margin:100px;top:110px;}
-#bio{color:black; font-weight:normal;text-decoration:none; position:fixed;  left:50px; top-margin:100px; top:150px;}
-#media{color:black; font-weight:normal;text-decoration:none; position:fixed; left:50px; top-margin:100px; top:190px;}
-#contact{color:black; font-weight:normal;text-decoration:none; position:fixed; left:50px; top-margin:100px; top:230px;}
+#toplink>:hover{color:black; font-weight:bold; letter-spacing:4px;}
+#home{color:black; font-weight:normal;text-decoration:none; position:absolute; left:50px; top-margin:100px;top:250px;}
+#bio{color:black; font-weight:normal;text-decoration:none; position:absolute;  left:50px; top-margin:100px; top:290px;}
+#media{color:black; font-weight:normal;text-decoration:none; position:absolute; left:50px; top-margin:100px; top:330px;}
+#contact{color:black; font-weight:normal;text-decoration:none; position:absolute; left:50px; top-margin:100px; top:370px;}
+#studio{color:black; font-weight:normal;text-decoration:none; position:absolute; left:50px; top-margin:100px; top:410px;}
 
-h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san-serif; font-weight:lighter; font-size:26px; }
+#studio>#dropd{font-size:15px; position:absolute;}
 
-#tpflr {width:100%; background:black; top:0px; height:4%; position:fixed; display:none; opacity:1; box-shadow:.5px .5px .5px 1px black; border-radius: 0px 0px 1000px 1000px;}
-#topfloor{width:33px; height:22px; right:1.6%; top:1px; background:white; border-radius:4px 4px 12px 4px; position:absolute; display:; transistion:background 5s linear 0s; animation:backgroundchange 15s infinite alternate ease-out; animation-delay:8s;}
-#topfloor>div {width:26px; height:3px; margin:3px; background:black; opacity:.2; border-radius:4px; transistion:background.8s linear 0s;}
-#topfloor:hover {background:rgba(0,0,0,.1); opacity:1; }
-#topfloor:hover div {background:white; width:18px; opacity:1;}
+.jumbotron{position:absolute; top:68%; width:95%; left:2%; background:rgba(0,0,0,.03); height:28%; display:none; }
+.jumbotron>h4{font-size: 13px; top:0%; left:2%; position:absolute; font-weight:bold;}
+.jumbotron>a{font-size:12px; left:3%; position:absolute; font-weight:bold; letter-spacing:3px; text-decoration:none; color:white; border-radius:8px;}
+
+h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san-serif; font-weight:lighter; font-size:26px; letter-spacing:5px; }
+
+
+#topfloor{width:17px; height:42px; right:.8%; top:45%; background:rgba(0,0,0,.08); border-radius:2px 2px 15px 2px; position:absolute; animation:colorchange 8s infinite alternate; animation-delay:2s;}
+#topfloor>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-38%; left:50%;}
+#topfloor>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-33%; left:30%;}
+#topfloor>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-30%; left:15%;}
+
+@keyframes colorchange {
+       20%{background: black;}
+	   40%{background: brown;}
+	   60%{background: violet;}
+	   80%{background: deepSkyBlue;}
+	   100%{background: purple;}
+
+}
+
+#topfloor1{width:17px; height:42px; right:.8%; top:45%; background:green; border-radius:2px 2px 15px 2px; position:absolute; display:none;}
+#topfloor1>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-38%; left:5%;}
+#topfloor1>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-33%; left:40%;}
+#topfloor1>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-30%; left:70%;}
+
 
 #std{width:100%; height:50%; position:absolute; background:rgba(0,0,0,.01); top:29%; box-shadow:inset 0px 2px 3px 1px rgba(0,0,0,.020); opacity:1;}
-#std>h2{position:absolute; left:.5%; font-size:60%; font-weight:normal; background:rgba(0,0,0,.08); color:white; letter-spacing:10px; border-radius:0px 10px 10px 0px;}
+#std>h2{position:absolute; left:2%; font-size:60%; font-weight:normal; background:rgba(0,0,0,.08); color:white; letter-spacing:10px; border-radius:0px 10px 10px 0px;}
 #stdi{position:absolute; left:2%; background:rgba(0,0,0,.03); width:95%; height:80%; top:11%; opacity:1; box-shadow:3px 3px 2px 1.2px rgba(0,0,0,.1); border-radius:0px 15px 15px 15px;}
 #stdi>video{position:absolute; left:4%; top:2%; height:95%; width:92%;}
 
@@ -122,25 +147,25 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
       
 }
 
-#lastbar{position:absolute; top:555%; background:linear-gradient(1000deg, rgba(0,0,0,.2) 30%, black 100%); width:100%; height:20%; left:0%; box-shadow:inset 1px 2px 5px rgba(0,0,0,0); border-radius: 0px 0px 0px 0px;}
-#lastbar>#h61{position:absolute; top:-10%; left:68%; color:grey;  font-size:.8em; font-weight:lighter; letter-spacing:6px; text-align:center;}
+#lastbar{position:absolute; top:555%; background:linear-gradient(1000deg, rgba(0,0,0,.2) 30%, black 100%); width:100%; height:15%; left:0%; box-shadow:inset 1px 2px 5px rgba(0,0,0,0); border-radius: 0px 0px 0px 0px;}
+#lastbar>#h61{position:absolute; top:15%; left:68%; color:grey;  font-size:.8em; font-weight:lighter; letter-spacing:6px; text-align:center;}
 #lastbar>#h61>b{background:grey; color:white; border-radius:50%;}
-#lastbar>#h62{position:absolute; top:10%; left:78%; color:grey; font-size:.8em; font-weight:lighter; letter-spacing:4px; text-align:center;}
+#lastbar>#h62{position:absolute; top:35%; left:78%; color:grey; font-size:.8em; font-weight:lighter; letter-spacing:4px; text-align:center;}
 #lastbar>#h62>a{text-decoration:none; color:grey; font-family:cursive; font-weight:bold;}
-#lastbar>#social{position:absolute; background:grey;}
-#lastbar>#social>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social{position:absolute; background:white; top:22%; height:55px; width:55px; left:5%; border-radius:20%;}
+#lastbar>#social>a>img{position:absolute; top:2%; height:51px; width:51px; left:2%; filter:grayscale(100); border-radius:50%;}
 #lastbar>#social>a>img:hover{filter:grayscale(0);}
 
-#lastbar>#social1{position:absolute; background:grey;}
-#lastbar>#social1>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social1{position:absolute; background:white; top:22%; height:55px; width:55px; left:11%; border-radius:20%;}
+#lastbar>#social1>a>img{position:absolute; top:2%; height:51px; width:51px; left:2%; filter:grayscale(100); border-radius:50%;}
 #lastbar>#social1>a>img:hover{filter:grayscale(0);}
  
-#lastbar>#social2{position:absolute; background:grey;}
-#lastbar>#social2>a>img{position:absolute; filter:grayscale(100); border-radius:20%;}
+#lastbar>#social2{position:absolute; background:white; top:22%; height:55px; width:55px; left:17%; border-radius:20%;}
+#lastbar>#social2>a>img{position:absolute; top:7%; height:45px; width:45px; left:8%; filter:grayscale(100); border-radius:20%;}
 #lastbar>#social2>a>img:hover{filter:grayscale(0);}
  
-#lastbar>#social3{position:absolute; background:grey;}
-#lastbar>#social3>a>img{position:absolute; filter:grayscale(100); border-radius:50%;}
+#lastbar>#social3{position:absolute; background:white; top:22%; height:55px; width:55px; left:23%; border-radius:20%;}
+#lastbar>#social3>a>img{position:absolute; top:2%; height:51px; width:51px; left:2%; filter:grayscale(100); border-radius:50%;}
 #lastbar>#social3>a>img:hover{filter:grayscale(0);}
 
  
