--- a/css/studio.css
+++ b/css/studio.css
@@ -30,7 +30,7 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
 @keyframes colorchange {
        20%{background: black;}
 	   40%{background: brown;}
-	   60%{background: violet;}
+	   60%{background: orange;}
 	   80%{background: deepSkyBlue;}
 	   100%{background: purple;}
 
