--- a/css/studio.css
+++ b/css/studio.css
@@ -1,9 +1,18 @@
 body{opacity:1; transistion: opacity.5s linear 0s;}
 
-#topbar {width:15.1%; height:100%; left:-13.6%; background:white; position:fixed; opacity:.99; top:0px; display:block; transistion:left:1s linear 0s;}
+#topbar {width:15.1%; height:100%; left:-15%; background:white; position:fixed; opacity:.99; top:0px; display:block; transistion:left:1s linear 0s;}
 #topbar>#topimg { position:absolute; top:2px; left:0px; display:block; height:30%; width:90%; border:2px double grey; border-radius:50%;}	
 #topbar:hover {background:linear-gradient(white 15%, grey 555%); }
 
+@media (max-width:768px){
+#topbar{left:-60%; width:55%;}
+#topbar>#topimg{width:85%;}
+}
+
+@media screen and(max-width:768px){
+#topbar{left:-60%; width:55%;}
+#topbar>#topimg{width:85%;}
+}
 
 #toplink{bottom-margin:100px;}
 #toplink>:hover{color:black; font-weight:bold; letter-spacing:4px;}
@@ -19,13 +28,53 @@ body{opacity:1; transistion: opacity.5s linear 0s;}
 .jumbotron>h4{font-size: 13px; top:0%; left:2%; position:absolute; font-weight:bold;}
 .jumbotron>a{font-size:12px; left:3%; position:absolute; font-weight:bold; letter-spacing:3px; text-decoration:none; color:white; border-radius:8px;}
 
+@media (max-width:768px){
+    #home{top:210px; left:25px;}
+    #bio{top:250px; left:25px;}
+    #media{top:290px; left:25px;}
+    #contact{top:330px; left:25px;}
+    #studio{top:370px; left:25px;}
+}
+
+@media screen and(max-width:768px){
+    #home{top:210px; left:25px;}
+    #bio{top:250px; left:25px;}
+    #media{top:290px; left:25px;}
+    #contact{top:330px; left:25px;}
+    #studio{top:370px; left:25px;}
+}
+
 h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san-serif; font-weight:lighter; font-size:26px; letter-spacing:5px; }
 
+@media(max-width:768px){
+    h1{font-size:23px; letter-spacing:2px; top:17%;}
+}
 
-#topfloor{width:17px; height:42px; right:.8%; top:45%; background:rgba(0,0,0,.08); border-radius:2px 2px 15px 2px; position:absolute; animation:colorchange 8s infinite alternate; animation-delay:2s;}
+@media screen and(max-width:768px){
+    h1{font-size:23px; letter-spacing:2px; top:17%;}
+}
+
+#topfloor{width:17px; height:42px; right:.3%; top:45%; background:rgba(0,0,0,.08); border-radius:2px 2px 15px 2px; position:fixed; animation:colorchange 8s infinite alternate; animation-delay:2s; display:block;}
 #topfloor>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-38%; left:50%;}
 #topfloor>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-33%; left:30%;}
 #topfloor>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-30%; left:15%;}
+#topfloor2{display:none;}
+
+@media (max-width:768px){
+#topfloor2{width:17px; height:42px; left:.3%; top:45%; background:rgba(0,0,0,.08); border-radius:2px 2px 15px 2px; position:fixed; animation:colorchange 8s infinite alternate; animation-delay:2s; display:block;}
+#topfloor2>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-38%; left:50%;}
+#topfloor2>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-35%; left:30%;}
+#topfloor2>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-34%; left:15%;}
+#topfloor{display:none;}
+}
+
+@media screen and(max-width:768px){
+#topfloor2{width:17px; height:42px; left:.3%; top:45%; background:rgba(0,0,0,.08); border-radius:2px 2px 15px 2px; position:fixed; animation:colorchange 8s infinite alternate; animation-delay:2s; display:block;}
+#topfloor2>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-55%; left:50%;}
+#topfloor2>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-35%; left:30%;}
+#topfloor2>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-19%; left:15%;}
+#topfloor{display:none;}
+}
 
 @keyframes colorchange {
        20%{background: black;}
@@ -41,13 +90,32 @@ h1{ position:absolute; text-align:center; top:15.5%; left:108px; font-family:san
 #topfloor1>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-33%; left:40%;}
 #topfloor1>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-30%; left:70%;}
 
+@media (max-width:768px){
+#topfloor3{width:17px; height:42px; right:.8%; top:45%; background:green; border-radius:2px 2px 15px 2px; position:absolute; display:none;}
+#topfloor3>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-38%; left:5%;}
+#topfloor3>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-35%; left:40%;}
+#topfloor3>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-34%; left:70%;}
+}
+
+@media screen and(max-width:768px){
+#topfloor3{width:17px; height:42px; right:.8%; top:45%; background:green; border-radius:2px 2px 15px 2px; position:absolute; display:none;}
+#topfloor3>#h31{position:absolute; font-size:25px; width:1px; color:white; top:-55%; left:5%;}
+#topfloor3>#h32{position:absolute; font-size:18px; width:1px; color:white; top:-35%; left:40%;}
+#topfloor3>#h33{position:absolute; font-size:12px; width:1px; color:white; top:-19%; left:70%;}
+}
 
 #std{width:100%; height:50%; position:absolute; background:rgba(0,0,0,.01); top:29%; box-shadow:inset 0px 2px 3px 1px rgba(0,0,0,.020); opacity:1;}
 #std>h2{position:absolute; left:2%; font-size:60%; font-weight:normal; background:rgba(0,0,0,.08); color:white; letter-spacing:10px; border-radius:0px 10px 10px 0px;}
 #stdi{position:absolute; left:2%; background:rgba(0,0,0,.03); width:95%; height:80%; top:11%; opacity:1; box-shadow:3px 3px 2px 1.2px rgba(0,0,0,.1); border-radius:0px 15px 15px 15px;}
 #stdi>video{position:absolute; left:4%; top:2%; height:95%; width:92%;}
 
+@media(max-width:768px){
+    #std>h2{left:2.5%; font-weight:normal; font-size:60%; letter-spacing:10px;}
+}
 
+@media screen and(max-width:768px){
+    #std>h2{left:2.5%; font-weight:normal; font-size:60%; letter-spacing:10px;}
+}
 
 #pichold{position:absolute; top:100%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
