--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ window{opacity:1; background:black; }
 
 @media only screen and (max-width:768px){
 
-	 #preload-page{width:100%; height:100%; background:white; display:block;}
+	 #preload-page{width:100%; height:100%; background:white; display:none;}
 	 #preload-img{position:absolute; width:100%; height:100%;}
 	 #preloader{position:absolute; top:90%; right:5%; width:48px; height:48px; border-radius:50px; border-top:10px solid red; border-left:10px solid teal; border-right:10px solid black; border-bottom:10px solid grey; animation:rotator  1s infinite; }
 	 @keyframes rotator{
