--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ window{opacity:1; background:black; }
      #lastbar>#social3{top:67%; height:22px; width:22px; left:35%; border-radius:20%; }
      #lastbar>#social3>a>img{top:5%; left:3%; height:20px; width:20px;}
      
-	 #modal-form{position:fixed; height:100%; width:100%;}
+	 #modal-form{position:absolute; height:100%; width:100%;}
 	 #modal-form>h2{font-size:12px; font-weight:bold; position:absolute; left:10%; top:-5%; letter-spacing:5px;}
 	 #modal-form>h3{font-size:12px;  position:absolute; right:10%; top:15%;} 
 	 #modal-form>h4{font-size:10px;  position:absolute; right:10.5%; top:24%;}
