--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@
 
 @media only screen and (max-width:768px){
 
-	 #preload-page{width:100%; height:100%; background:white; display:block;}
+	 #preload-page{width:100%; height:100%; background:white; display:none;}
 	 #preload-img{position:absolute; width:100%; height:100%;}
 	 #preloader{position:absolute; top:90%; right:5%; width:28px; height:28px; border-radius:50px; border-top:2px solid red; border-left:2px solid teal; border-right:2px solid black; border-bottom:2px solid grey; display:none; animation:rotator  1s infinite; }
 	 @keyframes rotator{
